--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.1.0",
     "@astrojs/rss": "^2.3.1",
-    "astro": "^2.1.3"
+    "astro": "^2.1.3",
+    "preact": "^10.13.1"
   }
 }
